--- a/arduino/moisture_history.html
+++ b/arduino/moisture_history.html
@@ -16,7 +16,7 @@
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         line-height: 1.6;
         color: #333;
-        background-color: #f5f7fa;
+        background-color: #f0fdf4;
         padding: 20px;}
 
         
