--- a/arduino/moisture_history.html
+++ b/arduino/moisture_history.html
@@ -396,11 +396,11 @@
                         label: 'Moisture (%)',
                         data: moistureValues,
                         backgroundColor: 'rgba(59, 130, 246, 0.2)',
-                        borderColor: 'rgba(59, 130, 246, 1)',
-                        borderWidth: 2,
+                        backgroundColor: 'rgba(33, 107, 57, 0.2)',
+                        borderColor: '#216b39',
+                        pointBackgroundColor: '#216b39'
                         tension: 0.2,
                         pointRadius: 3,
-                        pointBackgroundColor: 'rgba(59, 130, 246, 1)'
                     }]
                 },
                 options: {
