--- a/arduino/moisture_history.html
+++ b/arduino/moisture_history.html
@@ -96,7 +96,7 @@
         }
         
         .card {
-            background: #f0fdf4;
+            background: white;
             border-radius: 12px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
             padding: 20px;
