--- a/arduino/moisture_history.html
+++ b/arduino/moisture_history.html
@@ -395,12 +395,12 @@
                     datasets: [{
                         label: 'Moisture (%)',
                         data: moistureValues,
-                        backgroundColor: 'rgba(59, 130, 246, 0.2)',
-                        borderColor: 'rgba(59, 130, 246, 1)',
+                        backgroundColor: 'rgba(33, 107, 57, 0.2)',     // Light fill under the line
+                        borderColor: '#216b39',                        // Line color
+                        pointBackgroundColor: '#216b39',               // Dot color
                         borderWidth: 2,
                         tension: 0.2,
                         pointRadius: 3,
-                        pointBackgroundColor: 'rgba(59, 130, 246, 1)'
                     }]
                 },
                 options: {
