--- a/arduino/moisture_history.html
+++ b/arduino/moisture_history.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="{{ url_for('static', filename='Agent-Crop-Icon.png') }}">
     <title>Soil Moisture History</title>
     <style>
         /* CSS Reset */
