--- a/arduino/moisture_monitor.html
+++ b/arduino/moisture_monitor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="{{ url_for('static', filename='Agent-Crop-Icon.png') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
     <title>Soil Moisture Monitor</title>
     <style>
         /* CSS Reset */
