--- a/arduino/moisture_monitor.html
+++ b/arduino/moisture_monitor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soil Moisture Monitor</title>
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+    <link rel="icon" type="image/png" href="/static/favicon.png">
     <style>
         /* CSS Reset */
         * {
